# EvoAge

./: .env.example  .gitignore  LICENSE  README.md  deploy.sh  requirements.txt  zensical.toml
.github/workflows/: docs.yml
Backend/: .env.example  .gitignore  deploy.sh  pyproject.toml  requirements.txt
Backend/app/: auth_routes.py  hypothesis_routes.py  model_routes.py  routes.py  user_routes.py
DGL-EvoKG/Dummy_Input/: head.list  rel.list
EvoAGE_Training/: README.md  dglke_env.yml
Frontend/: .env  .env.example  Makefile  hypo_agents.py  streamlit_app.py
Frontend/Evo-KG-Chatbot/: .env.example  Makefile  README.md  agents.py  chat_history.db  environment.yml  pyproject.toml  requirements.txt
Frontend/Evo-KG-Chatbot/components/: Introduction.py  LoginSignup.py
Frontend/Evo-KG-Chatbot/evo-utils/src/kani_utils/: kani_streamlit_server_backup.py
Frontend/assets/: style.css
app/: hypothesis_routes.py  main.py  model_routes.py  routes.py
dgl-ke/: README.MD
doc/: data-collection.md  documentation-structure.md  index.md  installation.md  kg-construction.md  kg-tensors-and-splitting.md  neo4j-kg.md  ortholog-mapping.md  other-analysis-1-species.md  other-analysis-2-shuffled.md  preprocessing.md  quick-start.md  relation-processing.md  system-prerequisites.md
docs/: data-collection.md  index.md  installation.md  kg-construction.md  kg-tensors-and-splitting.md  ortholog-mapping.md  other-analysis-3-aging.md  other-analysis.md  preprocessing.md  quick-start.md  relation-processing.md  training.md
site/: 404.html  index.html  search.json  sitemap.xml
(+341 files in other folders)
